--- a/my-app/src/components/ContentBody.css
+++ b/my-app/src/components/ContentBody.css
@@ -52,3 +52,8 @@
     background-color: rgba(9,30,66,.08);
     border-radius: 3px;
 }
+.delElem-wrap{
+    margin-left: 15px;
+    color: white;
+    cursor: pointer;
+}
